tests/pass/BitwiseNot.java
package pass;

public class BitwiseNot {
  public int bitwiseNot(int x) {
    return ~x;
  }
}