tests/fail/BitwiseNot.java
package fail;

import java.lang.System;

public class BitwiseNot {
  // ~ is only allowed for intS (or types that can be coerced to int)
  String x = "hello";
  System.out.println(~x);
}

